# gnuradio4

./: .all-contributorsrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  .remarkrc.yaml  .restyled.yaml  .zenodo.json  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_DEVELOPMENT_GUIDELINE.md  CORE_NAMING_GUIDELINE.md  ClangBuildAnalyzer.ini  DEPENDENCIES.md  DEVELOPMENT.md  GOVERNANCE.md  INSTALL.md  LICENSE  LINKING_EXCEPTION.md  README.md  SUPPORT.md  claude_memory.md  claude_wip.md  compile_time_analysis.md  emscripten-build.ini  enableZRAM.sh  main.cpp  merge_headers.sh  meson.build  meson_options.txt  sonar-project.properties
algorithm/: CMakeLists.txt  README.md  meson.build
algorithm/benchmarks/: CMakeLists.txt  bm_FFT_backends.cpp  bm_FFT_backends_helpers.cpp  bm_FFT_backends_helpers.hpp  bm_fft.cpp  bm_pffft.cpp  bm_signal_generators.cpp  bm_svd.cpp
algorithm/src/: CMakeLists.txt  README.md  exprtk_example0.cpp  exprtk_example1.cpp  exprtk_example2.cpp  exprtk_example3.cpp  exprtk_example4.cpp
algorithm/test/: CMakeLists.txt  example_ImChart.cpp  fileio_pre.js  meson.build  qa_BurstTaper.cpp  qa_DataSetEstimators.cpp  qa_FileIo.cpp  qa_FileIoHelpers.cpp  qa_FilterTool.cpp  qa_GaussianNoise.cpp  qa_ImCanvas.cpp  qa_ImChart.cpp  qa_ImGraph.cpp  qa_NoiseGenerator.cpp  qa_SampleRateEstimator.cpp  qa_SavitzkyGolay.cpp  qa_SchmittTrigger.cpp  qa_SignalGeneratorCore.cpp  qa_SimdFFT.cpp  qa_SvdFilter.cpp  qa_ToneGenerator.cpp  qa_Xoshiro256pp.cpp  qa_algorithm_fourier.cpp  qa_simd_fft.cpp
bench/: CMakeLists.txt  benchmark.hpp  bm_buffer.cpp  bm_case0.cpp  bm_case1.cpp  bm_example.cpp  bm_fft.cpp  bm_filter.cpp  bm_history_buffer.cpp  bm_profiler.cpp  bm_scheduler.cpp  bm_test_helper.hpp  bm_timingctx.cpp  meson.build
blocklib_generator/tools/: CMakeLists.txt  parse_registrations.cpp  singleheader-config-bench.json  singleheader-config-graph.json
blocks/: CMakeLists.txt  README.md  meson.build
blocks/analog/: CMakeLists.txt
blocks/audio/: CMakeLists.txt
blocks/basic/: CMakeLists.txt  meson.build
blocks/common/: CMakeLists.txt
blocks/demo/: CMakeLists.txt
blocks/device/: CMakeLists.txt
blocks/electrical/: CMakeLists.txt
blocks/fileio/: CMakeLists.txt
blocks/filter/: CMakeLists.txt  meson.build
blocks/fourier/: CMakeLists.txt  meson.build
blocks/http/: CMakeLists.txt
blocks/libs/: CMakeLists.txt
blocks/math/: CMakeLists.txt
blocks/onnx/: CMakeLists.txt  ONNX_INSTALL.md  README.md
blocks/rtlsdr/: CMakeLists.txt  Readme.md
blocks/sdr/: CMakeLists.txt  Readme.md
blocks/shared_lib/: CMakeLists.txt
blocks/soapy/: CMakeLists.txt
blocks/testing/: CMakeLists.txt  meson.build
blocks/timing/: CMakeLists.txt
core/: CMakeLists.txt  README.md  meson.build
core/benchmarks/: CMakeLists.txt  bm-nosonar_node_api.cpp  bm_Buffer.cpp  bm_CRC.cpp  bm_HistoryBuffer.cpp  bm_MergeApi.cpp  bm_Profiler.cpp  bm_Scheduler.cpp  bm_ValueMap.cpp  bm_buffer.cpp  bm_fft.cpp  bm_filter.cpp  bm_history_buffer.cpp  bm_node_api.cpp  bm_portLimits.cpp  bm_profiler.cpp  bm_scheduler.cpp  bm_sync.cpp  bm_tensor.cpp  bm_tensor.py
core/cmake/: Plugins.cmake
core/include/: meson.build
core/src/: Block.cpp  BlockModel.cpp  BlockRegistry.cpp  CMakeLists.txt  Graph.cpp  Graph_yaml_importer.cpp  PluginLoader.cpp  PmtTypeHelpers.cpp  Settings.cpp  SimpleSchedulersPlugin.cpp  Value.cpp  ValueHelper.cpp  fft_test.cpp  main.cpp  main_simd.cpp  main_sycl.cpp  main_sycl_fft.cpp  plugin.cpp  utils.cpp
core/test/: ArrayTestBlocks.hpp  CMakeLists.txt  CollectionTestBlocks.hpp  EmbeddedDemoBlocks.hpp  TestBlockRegistryContext.hpp  app_grc.cpp  app_plugins_test.cpp  build_configure.hpp.in  device_test_helpers.cpp  device_test_helpers.hpp  meson.build  message_utils.hpp  qa_AtomicBitset.cpp  qa_AtomicRef.cpp  qa_Block.cpp  qa_BlockHouseKeeping.cpp  qa_BlockModel.cpp  qa_BlockRegistry.cpp  qa_BlockingSync.cpp  qa_ByteRingBuffer.cpp  qa_CRC.cpp  qa_ChunkBuffer.cpp  qa_ChunkPool.cpp  qa_Complex.cpp  qa_ComputeDomain.cpp  qa_DataSet.cpp  qa_DeviceContext.cpp  qa_DeviceMultiplyConst.cpp  qa_DeviceScheduler.cpp  qa_DynamicBlock.cpp  qa_DynamicPort.cpp  qa_Embedded.cpp  qa_Execution.cpp  qa_FeedbackMerge.cpp  qa_FeedbackMergeWithTap.cpp  qa_Graph.cpp  qa_GraphMessages.cpp  qa_GraphTools.cpp  qa_HierBlock.cpp  qa_LifeCycle.cpp  (+53 more)
devtools/: .namingConvention  CMakeLists.txt  check_naming_convention.cpp  singleheader-config-graph.json
devtools/test/: conforming_naming.cpp  non_conforming_naming.cpp
include/: CMakeLists.txt  README.md  annotated.hpp  block.hpp  block_registry.hpp  block_traits.hpp  buffer.hpp  buffer_skeleton.hpp  circular_buffer.hpp  claim_strategy.hpp  data_sink.hpp  dataset.hpp  graph.hpp  graph_contracts.h  graph_contracts.hpp  graph_yaml_importer.hpp  history_buffer.hpp  merged_node.hpp  meson.build  node.hpp  node_registry.hpp  node_traits.hpp  nodes.hpp  plugin.cpp  plugin.hpp  plugin_loader.hpp  port.hpp  port_traits.hpp  profiler.hpp  reader_writer_lock.hpp  reflection.hpp  scheduler.hpp  sequence.hpp  settings.hpp  tag.hpp  thread_affinity.hpp  thread_pool.hpp  timingctx.hpp  transactions.hpp  typelist.hpp  (+2 more)
include/assets/: graph_core_structure.odg  scheduler_schematic.odg
include/vir/: detail.h  simd.h  simd_bit.h  simd_bitset.h  simd_cast.h  simd_float_ops.h  simd_resize.h
meta/: CMakeLists.txt  README.md  meson.build
meta/test/: CMakeLists.txt  meson.build  qa_RangesHelper.cpp  qa_UncertainValue.cpp  qa_fixed_string.cpp  qa_formatter.cpp  qa_reflection.cpp  qa_traits.cpp  (+1 more)
test/: CMakeLists.txt  app_grc.cpp  app_plugins_test.cpp  meson.build  qa_block.cpp  qa_buffer.cpp  qa_data_sink.cpp  qa_decimator.cpp  qa_dynamic_block.cpp  qa_dynamic_node.cpp  qa_dynamic_port.cpp  qa_fft.cpp  qa_filter.cpp  qa_hier_block.cpp  qa_hier_node.cpp  qa_node.cpp  qa_plugins_test.cpp  qa_port.cpp  qa_reader_writer_lock.cpp  qa_scheduler.cpp  qa_selector.cpp  qa_settings.cpp  qa_sources.cpp  qa_tags.cpp  qa_thread_affinity.cpp  qa_thread_pool.cpp  qa_timingctx.cpp  qa_traits.cpp
(+565 files in other folders)
